--- a/.env.dist
+++ b/.env.dist
@@ -2,6 +2,7 @@ GMAP_API_KEY=<secret>
 SENDINBLUE_API_KEY=<secret>
 NEXT_PUBLIC_URL=http://localhost:3000
 DATABASE_URL=postgresql://impactco2:impactco2@localhost:5432/impactco2
+UNSAFE_EVAL=true
 
 NEXT_PUBLIC_CONTACT_EMAIL=impactco2@ademe.fr
 
