--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@tanstack/react-query": "^5.17.19",
     "axios": "^1.6.5",
     "chrome-aws-lambda": "^10.1.0",
+    "classnames": "^2.5.1",
     "dotenv-cli": "^7.3.0",
     "express-rate-limit": "^7.1.5",
     "express-slow-down": "^2.0.1",
@@ -62,6 +63,11 @@
     "next-query-params": "^5.0.0",
     "next-sitemap": "^4.2.3",
     "notion-client": "^6.16.0",
+    "postcss": "^8.4.33",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-import": "^16.0.0",
+    "postcss-nested": "^6.0.1",
+    "postcss-preset-env": "^9.3.0",
     "publicodes": "1.0.0-beta.77",
     "publicodes-react": "1.0.0-beta.77",
     "puppeteer-core": "^21.7.0",
