--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "yarn": "1.22"
   },
   "dependencies": {
+    "@babel/runtime": "^7.23.8",
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/sortable": "^8.0.0",
     "@incubateur-ademe/publicodes-impact-livraison": "^0.2.1",
@@ -120,7 +121,6 @@
     "@types/swagger-ui-react": "^4.18.3",
     "@typescript-eslint/eslint-plugin": "^6.19.1",
     "@typescript-eslint/parser": "^6.19.1",
-    "babel-plugin-tailwind-components": "^0.5.10",
     "chromatic": "^10.3.1",
     "eslint": "8.56.0",
     "eslint-config-next": "14.1.0",
