--- a/package.json
+++ b/package.json
@@ -95,11 +95,16 @@
     "swagger-ui-react": "^5.11.0",
     "twemoji": "^14.0.2",
     "use-query-params": "^2.2.1",
-    "webpack": "^5.89.0",
+    "webpack": "^5.90.0",
     "webpack-cli": "^5.1.4",
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@babel/cli": "^7.23.4",
+    "@babel/core": "^7.23.7",
+    "@babel/preset-env": "^7.23.8",
+    "@babel/preset-react": "^7.23.3",
+    "@babel/preset-typescript": "^7.23.3",
     "@playwright/test": "^1.41.1",
     "@storybook/addon-a11y": "^7.6.10",
     "@storybook/addon-essentials": "^7.6.10",
@@ -120,7 +125,9 @@
     "@types/swagger-ui-react": "^4.18.3",
     "@typescript-eslint/eslint-plugin": "^6.19.1",
     "@typescript-eslint/parser": "^6.19.1",
+    "babel-loader": "^9.1.3",
     "chromatic": "^10.3.1",
+    "css-loader": "^6.9.1",
     "eslint": "8.56.0",
     "eslint-config-next": "14.1.0",
     "eslint-config-prettier": "^9.1.0",
@@ -140,10 +147,13 @@
     "nock": "^13.5.0",
     "node-mocks-http": "^1.14.1",
     "nyc": "^15.1.0",
+    "postcss-loader": "^8.0.0",
     "prettier": "^3.2.4",
     "prisma": "^5.8.1",
     "storybook": "^7.6.10",
     "storybook-dark-mode": "^3.0.3",
+    "style-loader": "^3.3.4",
+    "terser-webpack-plugin": "^5.3.10",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3",
     "undici": "^5.28.0"
