--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
     "teste:local": "NODE_ENV=test playwright test --ui",
     "testu:local": "NODE_ENV=test jest --watch ./testu",
     "dev": "next dev",
-    "build": "yarn iframe && next build",
+    "build": "yarn webpack && next build",
     "build:analyze": "ANALYZE=true next build",
     "postbuild": "next-sitemap",
-    "iframe": "dotenv -e .env.local webpack",
+    "webpack": "dotenv -e .env.local webpack",
     "start": "next start",
     "lint": "next lint",
     "prepare": "husky install",
@@ -71,6 +71,7 @@
     "postcss-import": "^16.0.0",
     "postcss-nested": "^6.0.1",
     "postcss-preset-env": "^9.3.0",
+    "preact": "^10.19.3",
     "publicodes": "1.0.0-beta.77",
     "publicodes-react": "1.0.0-beta.77",
     "puppeteer-core": "^21.7.0",
