--- a/package.json
+++ b/package.json
@@ -45,7 +45,6 @@
     "yarn": "1.22"
   },
   "dependencies": {
-    "@babel/runtime": "^7.23.9",
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/sortable": "^8.0.0",
     "@incubateur-ademe/publicodes-impact-livraison": "^0.2.1",
@@ -56,9 +55,7 @@
     "@socialgouv/matomo-next": "^1.8.0",
     "@tanstack/react-query": "^5.21.7",
     "axios": "^1.6.7",
-    "chrome-aws-lambda": "^10.1.0",
     "classnames": "^2.5.1",
-    "dotenv-cli": "^7.3.0",
     "express-rate-limit": "^7.1.5",
     "express-slow-down": "^2.0.1",
     "focus-trap-react": "^10.2.3",
@@ -79,7 +76,6 @@
     "preact": "^10.19.5",
     "publicodes": "1.0.0-beta.77",
     "publicodes-react": "1.0.0-beta.77",
-    "puppeteer-core": "^22.1.0",
     "react": "18.2.0",
     "react-countup": "^6.5.0",
     "react-dom": "18.2.0",
@@ -91,18 +87,13 @@
     "react-share": "^5.1.0",
     "react-slick": "^0.30.2",
     "react-switch": "^7.0.0",
-    "react-tooltip": "^5.26.3",
-    "react-use-query-param-string": "^2.1.5",
     "sharp": "^0.33.2",
-    "sib-api-v3-sdk": "^8.5.0",
     "styled-components": "^6.1.8",
     "styled-normalize": "^8.1.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-react": "^5.11.7",
     "twemoji": "^14.0.2",
     "use-query-params": "^2.2.1",
-    "webpack": "^5.90.2",
-    "webpack-cli": "^5.1.4",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -111,6 +102,7 @@
     "@babel/preset-env": "^7.23.9",
     "@babel/preset-react": "^7.23.3",
     "@babel/preset-typescript": "^7.23.3",
+    "@babel/runtime": "^7.23.9",
     "@playwright/test": "^1.41.2",
     "@storybook/addon-a11y": "^7.6.16",
     "@storybook/addon-essentials": "^7.6.16",
@@ -134,6 +126,7 @@
     "babel-loader": "^9.1.3",
     "chromatic": "^10.9.6",
     "css-loader": "^6.10.0",
+    "dotenv-cli": "^7.3.0",
     "eslint": "8.56.0",
     "eslint-config-next": "14.1.0",
     "eslint-config-prettier": "^9.1.0",
@@ -162,7 +155,9 @@
     "terser-webpack-plugin": "^5.3.10",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3",
-    "undici": "^5.28.0"
+    "undici": "^5.28.0",
+    "webpack": "^5.90.2",
+    "webpack-cli": "^5.1.4"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
@@ -174,5 +169,8 @@
     ]
   },
   "readme": "ERROR: No README data found!",
-  "_id": "impactco2@0.2.0"
+  "_id": "impactco2@0.2.0",
+  "resolutions": {
+    "jackspeak": "2.1.1"
+  }
 }
