feat: Different server for images

--- a/.env.dist
+++ b/.env.dist
@@ -1,6 +1,7 @@
 GMAP_API_KEY=<secret>
 SENDINBLUE_API_KEY=<secret>
 NEXT_PUBLIC_URL=http://localhost:3000
+NEXT_PUBLIC_IMAGE_URL=http://localhost:3000
 DATABASE_URL=postgresql://impactco2:impactco2@localhost:5432/impactco2
 UNSAFE_EVAL=true
 
