--- a/src/npm/react/tsconfig.json
+++ b/src/npm/react/tsconfig.json
@@ -1,8 +1,6 @@
 {
   "extends": "../../../tsconfig.json",
-  "include": [
-    "index.ts"
-  ],
+  "include": ["index.ts"],
   "compilerOptions": {
     "module": "CommonJS",
     "declaration": true,
