--- a/.env.dist
+++ b/.env.dist
@@ -9,3 +9,6 @@ NEXT_PUBLIC_CONTACT_EMAIL=impactco2@ademe.fr
 
 NOTION_API_KEY=<secret>
 NOTION_API_DB_CONTACTS=<key>
+
+NEXT_PUBLIC_MATOMO_SITE_URL=https://stats.beta.gouv.fr
+NEXT_PUBLIC_MATOMO_SITE_ID=90
