--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "impactco2",
-  "version": "0.2.0",
+  "version": "1.0.0",
   "private": true,
   "browser": {
     "fs": false,
@@ -49,22 +49,22 @@
     "@dnd-kit/sortable": "^8.0.0",
     "@incubateur-ademe/publicodes-impact-livraison": "^0.2.1",
     "@incubateur-ademe/publicodes-negaoctet": "^1.0.1",
-    "@next/bundle-analyzer": "^14.1.0",
+    "@next/bundle-analyzer": "^14.1.3",
     "@prisma/client": "5.8.1",
-    "@sentry/nextjs": "^7.101.1",
-    "@socialgouv/matomo-next": "^1.8.0",
-    "@tanstack/react-query": "^5.21.7",
-    "axios": "^1.6.7",
+    "@sentry/nextjs": "^7.107.0",
+    "@socialgouv/matomo-next": "^1.8.1",
+    "@tanstack/react-query": "^5.28.4",
+    "axios": "^1.6.8",
     "classnames": "^2.5.1",
-    "express-rate-limit": "^7.1.5",
+    "express-rate-limit": "^7.2.0",
     "express-slow-down": "^2.0.1",
     "focus-trap-react": "^10.2.3",
     "fuse.js": "^7.0.0",
     "helmet": "^7.1.0",
     "html-to-image": "^1.11.11",
     "iframe-resizer": "^4.3.9",
-    "markdown-to-jsx": "^7.4.0",
-    "next": "^14.1.0",
+    "markdown-to-jsx": "^7.4.3",
+    "next": "^14.1.3",
     "next-query-params": "^5.0.0",
     "next-sitemap": "^4.2.3",
     "notion-client": "^6.16.0",
@@ -72,8 +72,8 @@
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-import": "^16.0.1",
     "postcss-nested": "^6.0.1",
-    "postcss-preset-env": "^9.3.0",
-    "preact": "^10.19.5",
+    "postcss-preset-env": "^9.5.1",
+    "preact": "^10.19.6",
     "publicodes": "1.0.0-beta.77",
     "publicodes-react": "1.0.0-beta.77",
     "react": "18.2.0",
@@ -91,27 +91,27 @@
     "styled-components": "^6.1.8",
     "styled-normalize": "^8.1.1",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-react": "^5.11.7",
+    "swagger-ui-react": "^5.12.0",
     "twemoji": "^14.0.2",
     "use-query-params": "^2.2.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@babel/cli": "^7.23.9",
-    "@babel/core": "^7.23.9",
-    "@babel/preset-env": "^7.23.9",
+    "@babel/core": "^7.24.0",
+    "@babel/preset-env": "^7.24.0",
     "@babel/preset-react": "^7.23.3",
     "@babel/preset-typescript": "^7.23.3",
-    "@babel/runtime": "^7.23.9",
-    "@playwright/test": "^1.41.2",
+    "@babel/runtime": "^7.24.0",
+    "@playwright/test": "^1.42.1",
     "@statoscope/webpack-plugin": "^5.28.2",
-    "@storybook/addon-a11y": "^7.6.16",
-    "@storybook/addon-essentials": "^7.6.16",
-    "@storybook/addon-interactions": "^7.6.16",
-    "@storybook/addon-links": "^7.6.16",
-    "@storybook/blocks": "^7.6.16",
-    "@storybook/nextjs": "^7.6.16",
-    "@storybook/react": "^7.6.16",
+    "@storybook/addon-a11y": "^8.0.0",
+    "@storybook/addon-essentials": "^8.0.0",
+    "@storybook/addon-interactions": "^8.0.0",
+    "@storybook/addon-links": "^8.0.0",
+    "@storybook/blocks": "^8.0.0",
+    "@storybook/nextjs": "^8.0.0",
+    "@storybook/react": "^8.0.0",
     "@storybook/testing-library": "^0.2.2",
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^14.2.1",
@@ -122,42 +122,42 @@
     "@types/react-slick": "^0.23.13",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-react": "^4.18.3",
-    "@typescript-eslint/eslint-plugin": "^7.0.1",
-    "@typescript-eslint/parser": "^7.0.1",
+    "@typescript-eslint/eslint-plugin": "^7.2.0",
+    "@typescript-eslint/parser": "^7.2.0",
     "babel-loader": "^9.1.3",
-    "chromatic": "^10.9.6",
+    "chromatic": "^11.0.8",
     "css-loader": "^6.10.0",
-    "dotenv-cli": "^7.3.0",
-    "eslint": "8.56.0",
-    "eslint-config-next": "14.1.0",
+    "dotenv-cli": "^7.4.1",
+    "eslint": "8.57.0",
+    "eslint-config-next": "14.1.3",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-better-styled-components": "^1.1.2",
     "eslint-plugin-jest": "^27.9.0",
     "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react": "^7.34.0",
     "eslint-plugin-storybook": "^0.8.0",
     "eslint-plugin-styled-components-a11y": "^2.1.32",
     "husky": "^9.0.11",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "lint-staged": "^15.2.2",
-    "msw": "^2.2.1",
+    "msw": "^2.2.3",
     "next-router-mock": "^0.9.12",
-    "next-test-api-route-handler": "^4.0.3",
-    "nock": "^13.5.3",
+    "next-test-api-route-handler": "^4.0.5",
+    "nock": "^13.5.4",
     "node-mocks-http": "^1.14.1",
     "nyc": "^15.1.0",
-    "postcss-loader": "^8.1.0",
+    "postcss-loader": "^8.1.1",
     "prettier": "^3.2.5",
-    "prisma": "^5.8.1",
-    "storybook": "^7.6.16",
-    "storybook-dark-mode": "^3.0.3",
+    "prisma": "5.8.1",
+    "storybook": "^8.0.0",
+    "storybook-dark-mode": "^4.0.0",
     "style-loader": "^3.3.4",
     "terser-webpack-plugin": "^5.3.10",
     "ts-node": "^10.9.2",
-    "typescript": "^5.3.3",
-    "undici": "^5.28.0",
-    "webpack": "^5.90.2",
+    "typescript": "^5.4.2",
+    "undici": "^6.9.0",
+    "webpack": "^5.90.3",
     "webpack-cli": "^5.1.4"
   },
   "lint-staged": {
@@ -170,9 +170,10 @@
     ]
   },
   "readme": "ERROR: No README data found!",
-  "_id": "impactco2@0.2.0",
+  "_id": "impactco2@1.0.0",
   "resolutions": {
-    "jackspeak": "2.1.1"
+    "jackspeak": "2.1.1",
+    "publicodes": "1.0.0-beta.77"
   },
   "packageManager": "yarn@1.22.21+sha1.1959a18351b811cdeedbd484a8f86c3cc3bbaf72"
 }
