--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "iframe-resizer": "^4.3.9",
     "markdown-to-jsx": "^7.4.5",
     "next": "^14.1.4",
+    "next-intl": "^3.10.0",
     "next-query-params": "^5.0.0",
     "next-sitemap": "^4.2.3",
     "notion-client": "^6.16.0",
