--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@sentry/nextjs": "^7.108.0",
     "@socialgouv/matomo-next": "^1.8.1",
     "@tanstack/react-query": "^5.28.8",
+    "@tanstack/react-query-next-experimental": "^5.28.14",
     "axios": "^1.6.8",
     "classnames": "^2.5.1",
     "dotenv-cli": "^7.4.1",
