--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "build:analyze": "ANALYZE=true next build",
     "postbuild": "next-sitemap",
     "webpack": "dotenv -e .env.local webpack",
+    "stats": "dotenv -e .env ts-node src/scripts/getStats.ts",
     "start": "next start",
     "lint": "next lint",
     "prepare": "husky install",
