--- a/package.json
+++ b/package.json
@@ -39,8 +39,8 @@
     "node": ">=20"
   },
   "dependencies": {
-    "@incubateur-ademe/publicodes-impact-livraison": "^0.3.0",
-    "@incubateur-ademe/publicodes-negaoctet": "^1.1.1",
+    "@incubateur-ademe/publicodes-impact-livraison": "0.2.1",
+    "@incubateur-ademe/publicodes-negaoctet": "1.0.1",
     "@next/bundle-analyzer": "^14.2.3",
     "@prisma/client": "5.8.1",
     "@sentry/nextjs": "^7.113.0",
@@ -69,7 +69,7 @@
     "postcss-nested": "^6.0.1",
     "postcss-preset-env": "^9.5.9",
     "preact": "^10.21.0",
-    "publicodes": "1.2.0",
+    "publicodes": "1.0.0-beta.77",
     "publicodes-react": "1.0.0-beta.77",
     "react": "18.3.1",
     "react-dom": "18.3.1",
