--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -32,3 +32,5 @@ jobs:
         run: yarn lint
       - name: Run build
         run: yarn build
+        env:
+          NOTION_API_KEY: ${{ secrets.NOTION_API_KEY}}
