--- a/package.json
+++ b/package.json
@@ -43,21 +43,21 @@
     "@incubateur-ademe/publicodes-negaoctet": "1.0.1",
     "@next/bundle-analyzer": "^14.2.3",
     "@prisma/client": "5.8.1",
-    "@sentry/nextjs": "^7.113.0",
+    "@sentry/nextjs": "^8.2.1",
     "@socialgouv/matomo-next": "^1.9.0",
-    "@tanstack/react-query": "^5.32.1",
-    "@tanstack/react-query-next-experimental": "^5.32.1",
-    "axios": "^1.6.8",
+    "@tanstack/react-query": "^5.37.1",
+    "@tanstack/react-query-next-experimental": "^5.37.1",
+    "axios": "^1.7.2",
     "classnames": "^2.5.1",
-    "dotenv-cli": "^7.4.1",
+    "dotenv-cli": "^7.4.2",
     "focus-trap-react": "^10.2.3",
     "fuse.js": "^7.0.0",
     "helmet": "^7.1.0",
     "html-to-image": "^1.11.11",
-    "iframe-resizer": "^4.3.11",
+    "iframe-resizer": "^4.4.0",
     "markdown-to-jsx": "^7.4.7",
     "next": "^14.2.3",
-    "next-intl": "^3.12.2",
+    "next-intl": "^3.14.0",
     "next-query-params": "^5.0.0",
     "next-sitemap": "^4.2.3",
     "notion-client": "^6.16.0",
@@ -65,8 +65,8 @@
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-import": "^16.1.0",
     "postcss-nested": "^6.0.1",
-    "postcss-preset-env": "^9.5.9",
-    "preact": "^10.21.0",
+    "postcss-preset-env": "^9.5.13",
+    "preact": "^10.22.0",
     "publicodes": "1.0.0-beta.77",
     "publicodes-react": "1.0.0-beta.77",
     "react": "18.3.1",
@@ -79,12 +79,12 @@
     "react-share": "^5.1.0",
     "react-slick": "^0.30.2",
     "react-switch": "^7.0.0",
-    "sharp": "^0.33.3",
+    "sharp": "^0.33.4",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-react": "^5.17.2",
+    "swagger-ui-react": "^5.17.12",
     "ts-node": "^10.9.2",
     "use-query-params": "^2.2.1",
-    "zod": "^3.23.6"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@babel/cli": "^7.24.5",
@@ -93,18 +93,18 @@
     "@babel/preset-react": "^7.24.1",
     "@babel/preset-typescript": "^7.24.1",
     "@babel/runtime": "^7.24.5",
-    "@playwright/test": "^1.43.1",
+    "@playwright/test": "^1.44.0",
     "@statoscope/webpack-plugin": "^5.28.2",
-    "@storybook/addon-a11y": "^8.0.9",
-    "@storybook/addon-essentials": "^8.0.9",
-    "@storybook/addon-interactions": "^8.0.9",
-    "@storybook/addon-links": "^8.0.9",
-    "@storybook/blocks": "^8.0.9",
-    "@storybook/nextjs": "^8.0.9",
-    "@storybook/react": "^8.0.9",
+    "@storybook/addon-a11y": "^8.1.2",
+    "@storybook/addon-essentials": "^8.1.2",
+    "@storybook/addon-interactions": "^8.1.2",
+    "@storybook/addon-links": "^8.1.2",
+    "@storybook/blocks": "^8.1.2",
+    "@storybook/nextjs": "^8.1.2",
+    "@storybook/react": "^8.1.2",
     "@storybook/testing-library": "^0.2.2",
-    "@testing-library/jest-dom": "^6.4.3",
-    "@testing-library/react": "^15.0.6",
+    "@testing-library/jest-dom": "^6.4.5",
+    "@testing-library/react": "^15.0.7",
     "@testing-library/user-event": "^14.5.2",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/jest": "^29.5.12",
@@ -112,23 +112,23 @@
     "@types/react-slick": "^0.23.13",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-react": "^4.18.3",
-    "@typescript-eslint/eslint-plugin": "^7.8.0",
-    "@typescript-eslint/parser": "^7.8.0",
+    "@typescript-eslint/eslint-plugin": "^7.10.0",
+    "@typescript-eslint/parser": "^7.10.0",
     "babel-loader": "^9.1.3",
-    "chromatic": "^11.3.0",
-    "css-loader": "^6.10.0",
+    "chromatic": "^11.4.0",
+    "css-loader": "6.10.0",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.3",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-jest": "^28.4.0",
+    "eslint-plugin-jest": "^28.5.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-storybook": "^0.8.0",
     "husky": "^9.0.11",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "lint-staged": "^15.2.2",
-    "msw": "^2.2.14",
+    "lint-staged": "^15.2.4",
+    "msw": "^2.3.0",
     "next-router-mock": "^0.9.13",
     "next-test-api-route-handler": "^4.0.7",
     "nock": "^13.5.4",
@@ -137,12 +137,12 @@
     "postcss-loader": "^8.1.1",
     "prettier": "^3.2.5",
     "prisma": "5.8.1",
-    "storybook": "^8.0.9",
+    "storybook": "^8.1.2",
     "storybook-dark-mode": "^4.0.1",
     "style-loader": "^4.0.0",
     "terser-webpack-plugin": "^5.3.10",
     "typescript": "^5.4.5",
-    "undici": "^6.15.0",
+    "undici": "^6.18.1",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4"
   },
