--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -34,3 +34,38 @@ jobs:
         run: yarn build
         env:
           NOTION_API_KEY: ${{ secrets.NOTION_API_KEY}}
+      - name: Migrate db
+        run: yarn prisma migrate deploy
+      - name: Start server
+        run: yarn start &
+      - name: Unit tests => with Jest
+        run: yarn testu
+      - name: API tests => with Jest & MSW
+        run: yarn testa
+      - run: mkdir -p ${{ github.workspace }}/tmp/artifacts
+      - name: Lighthouse Check
+        uses: foo-software/lighthouse-check-action@master
+        id: lighthouseCheck
+        with:
+          device: all
+          urls: 'http://localhost:3000,http://localhost:3000/outils/comparateur,http://localhost:3000/outils/usagenumerique,http://localhost:3000/outils/livraison,http://localhost:3000/outils/chauffage,http://localhost:3000/outils/transport,http://localhost:3000/outils/fruitsetlegumes,http://localhost:3000/outils/chauffage/pompeachaleur,http://localhost:3000/outils/usagenumerique/visioconference'
+          outputDirectory: ${{ github.workspace }}/tmp/artifacts
+      - name: Verify Lighthouse Check results
+        uses: foo-software/lighthouse-check-status-action@master
+        with:
+          lighthouseCheckResults: ${{ steps.lighthouseCheck.outputs.lighthouseCheckResults }}
+          minAccessibilityScore: '100'
+          minBestPracticesScore: '100'
+      - name: Upload playwright artifacts
+        uses: actions/upload-artifact@v3
+        if: always()
+        with:
+          name: playwright-report
+          path: test-results/
+          retention-days: 30
+      - name: Upload Lighthouse artifacts
+        uses: actions/upload-artifact@v3
+        if: always()
+        with:
+          name: Lighthouse reports
+          path: ${{ github.workspace }}/tmp/artifacts
