--- a/package.json
+++ b/package.json
@@ -125,6 +125,7 @@
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-storybook": "^0.8.0",
+    "http": "^0.0.1-security",
     "husky": "^9.0.11",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
