--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -42,8 +42,10 @@ jobs:
         run: yarn testu
       - name: API tests => with Jest
         run: yarn testa
+      - name: E2E tests => install Playwright
+        run: yarn playwright install
       - name: E2E tests => with Playwright
-        run: yarn testa
+        run: yarn teste
       - run: mkdir -p ${{ github.workspace }}/tmp/artifacts
       - name: Lighthouse Check
         uses: foo-software/lighthouse-check-action@master
