--- a/package.json
+++ b/package.json
@@ -40,37 +40,37 @@
   },
   "dependencies": {
     "@incubateur-ademe/publicodes-impact-livraison": "^0.3.0",
-    "@incubateur-ademe/publicodes-negaoctet": "^1.2.0-rc.2",
-    "@next/bundle-analyzer": "^14.2.4",
+    "@incubateur-ademe/publicodes-acv-numerique": "^1.2.0",
+    "@next/bundle-analyzer": "^14.2.5",
     "@prisma/client": "5.8.1",
-    "@publicodes/react-ui": "^1.3.3",
-    "@sentry/nextjs": "^8.12.0",
+    "@publicodes/react-ui": "^1.4.0",
+    "@sentry/nextjs": "^8.17.0",
     "@socialgouv/matomo-next": "^1.9.0",
-    "@tanstack/react-query": "^5.48.0",
-    "@tanstack/react-query-next-experimental": "^5.48.0",
+    "@tanstack/react-query": "^5.51.1",
+    "@tanstack/react-query-next-experimental": "^5.51.1",
     "axios": "^1.7.2",
     "classnames": "^2.5.1",
     "dotenv-cli": "^7.4.2",
     "fuse.js": "^7.0.0",
     "helmet": "^7.1.0",
     "html-to-image": "^1.11.11",
-    "iframe-resizer": "^4.4.2",
+    "iframe-resizer": "^4.4.5",
     "markdown-to-jsx": "^7.4.7",
-    "next": "^14.2.4",
-    "next-intl": "^3.15.2",
+    "next": "^14.2.5",
+    "next-intl": "^3.17.1",
     "next-query-params": "^5.0.0",
     "next-sitemap": "^4.2.3",
     "notion-client": "^6.16.0",
-    "postcss": "^8.4.38",
+    "postcss": "^8.4.39",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-import": "^16.1.0",
     "postcss-nested": "^6.0.1",
-    "postcss-preset-env": "^9.5.14",
-    "preact": "^10.22.0",
-    "publicodes": "^1.3.3",
+    "postcss-preset-env": "^9.6.0",
+    "preact": "^10.22.1",
+    "publicodes": "^1.4.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-flip-toolkit": "^7.1.0",
+    "react-flip-toolkit": "^7.2.4",
     "react-highlight-words": "^0.20.0",
     "react-notion-x": "^6.16.0",
     "react-range": "^1.8.14",
@@ -86,21 +86,21 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@babel/cli": "^7.24.7",
-    "@babel/core": "^7.24.7",
-    "@babel/preset-env": "^7.24.7",
+    "@babel/cli": "^7.24.8",
+    "@babel/core": "^7.24.9",
+    "@babel/preset-env": "^7.24.8",
     "@babel/preset-react": "^7.24.7",
     "@babel/preset-typescript": "^7.24.7",
-    "@babel/runtime": "^7.24.7",
-    "@playwright/test": "^1.45.0",
+    "@babel/runtime": "^7.24.8",
+    "@playwright/test": "^1.45.1",
     "@statoscope/webpack-plugin": "^5.28.2",
-    "@storybook/addon-a11y": "^8.1.10",
-    "@storybook/addon-essentials": "^8.1.10",
-    "@storybook/addon-interactions": "^8.1.10",
-    "@storybook/addon-links": "^8.1.10",
-    "@storybook/blocks": "^8.1.10",
-    "@storybook/nextjs": "^8.1.10",
-    "@storybook/react": "^8.1.10",
+    "@storybook/addon-a11y": "^8.2.4",
+    "@storybook/addon-essentials": "^8.2.4",
+    "@storybook/addon-interactions": "^8.2.4",
+    "@storybook/addon-links": "^8.2.4",
+    "@storybook/blocks": "^8.2.4",
+    "@storybook/nextjs": "^8.2.4",
+    "@storybook/react": "^8.2.4",
     "@storybook/testing-library": "^0.2.2",
     "@testing-library/jest-dom": "^6.4.6",
     "@testing-library/react": "^16.0.0",
@@ -111,17 +111,17 @@
     "@types/react-slick": "^0.23.13",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-react": "^4.18.3",
-    "@typescript-eslint/eslint-plugin": "^7.14.1",
-    "@typescript-eslint/parser": "^7.14.1",
+    "@typescript-eslint/eslint-plugin": "^7.16.1",
+    "@typescript-eslint/parser": "^7.16.1",
     "babel-loader": "^9.1.3",
-    "chromatic": "^11.5.4",
-    "css-loader": "6.10.0",
+    "chromatic": "^11.5.5",
+    "css-loader": "^7.1.2",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.3",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-jest": "^28.6.0",
     "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-react": "^7.34.3",
+    "eslint-plugin-react": "^7.34.4",
     "eslint-plugin-storybook": "^0.8.0",
     "http": "^0.0.1-security",
     "jest": "^29.7.0",
@@ -134,15 +134,15 @@
     "node-mocks-http": "^1.15.0",
     "nyc": "^17.0.0",
     "postcss-loader": "^8.1.1",
-    "prettier": "^3.3.2",
+    "prettier": "^3.3.3",
     "prisma": "5.8.1",
-    "storybook": "^8.1.10",
+    "storybook": "^8.2.4",
     "storybook-dark-mode": "^4.0.2",
     "style-loader": "^4.0.0",
     "terser-webpack-plugin": "^5.3.10",
-    "typescript": "^5.5.2",
+    "typescript": "^5.5.3",
     "undici": "^6.19.2",
-    "webpack": "^5.92.1",
+    "webpack": "^5.93.0",
     "webpack-cli": "^5.1.4"
   },
   "lint-staged": {
