--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "@incubateur-ademe/publicodes-impact-livraison": "^0.3.0",
     "@incubateur-ademe/publicodes-acv-numerique": "^1.2.0",
     "@next/bundle-analyzer": "^14.2.5",
-    "@prisma/client": "5.8.1",
+    "@prisma/client": "^5.16.2",
     "@publicodes/react-ui": "^1.4.0",
     "@sentry/nextjs": "^8.17.0",
     "@socialgouv/matomo-next": "^1.9.0",
@@ -135,7 +135,7 @@
     "nyc": "^17.0.0",
     "postcss-loader": "^8.1.1",
     "prettier": "^3.3.3",
-    "prisma": "5.8.1",
+    "prisma": "^5.16.2",
     "storybook": "^8.2.4",
     "storybook-dark-mode": "^4.0.2",
     "style-loader": "^4.0.0",
