--- a/package.json
+++ b/package.json
@@ -39,10 +39,10 @@
     "yarn": "1.22"
   },
   "dependencies": {
-    "@incubateur-ademe/publicodes-impact-livraison": "^0.3.0",
+    "@incubateur-ademe/publicodes-impact-livraison": "^0.3.1",
     "@incubateur-ademe/publicodes-acv-numerique": "^1.2.0",
     "@next/bundle-analyzer": "^14.2.5",
-    "@prisma/client": "^5.16.2",
+    "@prisma/client": "5.8.1",
     "@publicodes/react-ui": "^1.4.0",
     "@sentry/nextjs": "^8.17.0",
     "@socialgouv/matomo-next": "^1.9.0",
@@ -115,7 +115,7 @@
     "@typescript-eslint/parser": "^7.16.1",
     "babel-loader": "^9.1.3",
     "chromatic": "^11.5.5",
-    "css-loader": "^7.1.2",
+    "css-loader": "6.10.0",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.3",
     "eslint-config-prettier": "^9.1.0",
@@ -135,7 +135,7 @@
     "nyc": "^17.0.0",
     "postcss-loader": "^8.1.1",
     "prettier": "^3.3.3",
-    "prisma": "^5.16.2",
+    "prisma": "5.8.1",
     "storybook": "^8.2.4",
     "storybook-dark-mode": "^4.0.2",
     "style-loader": "^4.0.0",
