--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "@incubateur-ademe/publicodes-acv-numerique": "^1.2.0",
     "@next/bundle-analyzer": "^14.2.5",
     "@prisma/client": "5.8.1",
-    "@publicodes/react-ui": "^1.5.0",
+    "@publicodes/react-ui": "1.4.0",
     "@sentry/nextjs": "^8.25.0",
     "@socialgouv/matomo-next": "^1.9.0",
     "@tanstack/react-query": "^5.51.23",
@@ -67,7 +67,7 @@
     "postcss-nested": "^6.2.0",
     "postcss-preset-env": "^10.0.0",
     "preact": "^10.23.2",
-    "publicodes": "^1.5.0",
+    "publicodes": "1.4.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-flip-toolkit": "^7.2.4",
