fix: css loader

--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "@incubateur-ademe/publicodes-impact-livraison": "^0.3.1",
     "@incubateur-ademe/publicodes-acv-numerique": "^1.2.0",
     "@next/bundle-analyzer": "^14.2.5",
-    "@prisma/client": "5.18.0",
+    "@prisma/client": "^5.18.0",
     "@publicodes/react-ui": "1.4.0",
     "@sentry/nextjs": "^8.25.0",
     "@socialgouv/matomo-next": "^1.9.0",
@@ -115,7 +115,7 @@
     "@typescript-eslint/parser": "^8.1.0",
     "babel-loader": "^9.1.3",
     "chromatic": "^11.7.0",
-    "css-loader": "6.10.0",
+    "css-loader": "^7.1.2",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.3",
     "eslint-config-prettier": "^9.1.0",
@@ -135,7 +135,7 @@
     "nyc": "^17.0.0",
     "postcss-loader": "^8.1.1",
     "prettier": "^3.3.3",
-    "prisma": "5.18.0",
+    "prisma": "^5.18.0",
     "storybook": "^8.2.9",
     "storybook-dark-mode": "^4.0.2",
     "style-loader": "^4.0.0",
