--- a/package.json
+++ b/package.json
@@ -39,25 +39,26 @@
     "yarn": "1.22"
   },
   "dependencies": {
-    "@incubateur-ademe/publicodes-impact-livraison": "^0.3.1",
+    "@iframe-resizer/child": "^5.2.6",
+    "@iframe-resizer/parent": "^5.2.6",
     "@incubateur-ademe/publicodes-acv-numerique": "^1.2.0",
-    "@next/bundle-analyzer": "^14.2.5",
+    "@incubateur-ademe/publicodes-impact-livraison": "^0.3.1",
+    "@next/bundle-analyzer": "^14.2.6",
     "@prisma/client": "^5.18.0",
     "@publicodes/react-ui": "1.4.0",
     "@sentry/nextjs": "^8.26.0",
     "@socialgouv/matomo-next": "^1.9.0",
-    "@tanstack/react-query": "^5.51.23",
-    "@tanstack/react-query-next-experimental": "^5.51.23",
-    "axios": "^1.7.4",
+    "@tanstack/react-query": "^5.52.1",
+    "@tanstack/react-query-next-experimental": "^5.52.1",
+    "axios": "^1.7.5",
     "classnames": "^2.5.1",
     "dotenv-cli": "^7.4.2",
     "fuse.js": "^7.0.0",
     "helmet": "^7.1.0",
     "html-to-image": "^1.11.11",
-    "iframe-resizer": "^5.2.4",
     "markdown-to-jsx": "^7.5.0",
-    "next": "^14.2.5",
-    "next-intl": "^3.17.3",
+    "next": "^14.2.6",
+    "next-intl": "^3.17.6",
     "next-query-params": "^5.0.0",
     "next-sitemap": "^4.2.3",
     "notion-client": "^6.16.0",
@@ -88,10 +89,10 @@
   "devDependencies": {
     "@babel/cli": "^7.24.8",
     "@babel/core": "^7.25.2",
-    "@babel/preset-env": "^7.25.3",
+    "@babel/preset-env": "^7.25.4",
     "@babel/preset-react": "^7.24.7",
     "@babel/preset-typescript": "^7.24.7",
-    "@babel/runtime": "^7.25.0",
+    "@babel/runtime": "^7.25.4",
     "@playwright/test": "^1.46.1",
     "@statoscope/webpack-plugin": "^5.28.2",
     "@storybook/addon-a11y": "^8.2.9",
@@ -102,7 +103,7 @@
     "@storybook/nextjs": "^8.2.9",
     "@storybook/react": "^8.2.9",
     "@storybook/testing-library": "^0.2.2",
-    "@testing-library/jest-dom": "^6.4.8",
+    "@testing-library/jest-dom": "^6.5.0",
     "@testing-library/react": "^16.0.0",
     "@testing-library/user-event": "^14.5.2",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
@@ -111,13 +112,13 @@
     "@types/react-slick": "^0.23.13",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-react": "^4.18.3",
-    "@typescript-eslint/eslint-plugin": "^8.1.0",
-    "@typescript-eslint/parser": "^8.1.0",
+    "@typescript-eslint/eslint-plugin": "^8.2.0",
+    "@typescript-eslint/parser": "^8.2.0",
     "babel-loader": "^9.1.3",
     "chromatic": "^11.7.1",
     "css-loader": "6.11.0",
     "eslint": "8.57.0",
-    "eslint-config-next": "^14.2.5",
+    "eslint-config-next": "^14.2.6",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-jest": "^28.8.0",
     "eslint-plugin-prettier": "^5.2.1",
@@ -129,7 +130,7 @@
     "next-router-mock": "^0.9.13",
     "next-statoscope": "^1.0.1",
     "next-test-api-route-handler": "^4.0.8",
-    "nock": "^13.5.4",
+    "nock": "^13.5.5",
     "node-mocks-http": "^1.15.1",
     "nyc": "^17.0.0",
     "postcss-loader": "^8.1.1",
@@ -140,8 +141,8 @@
     "style-loader": "^4.0.0",
     "terser-webpack-plugin": "^5.3.10",
     "typescript": "^5.5.4",
-    "undici": "^6.19.7",
-    "webpack": "^5.93.0",
+    "undici": "^6.19.8",
+    "webpack": "^5.94.0",
     "webpack-cli": "^5.1.4"
   },
   "lint-staged": {
