--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@incubateur-ademe/publicodes-acv-numerique": "^1.2.0",
     "@incubateur-ademe/publicodes-impact-livraison": "^0.3.1",
     "@next/bundle-analyzer": "^14.2.6",
+    "@playwright/test": "^1.47.1",
     "@prisma/client": "^5.18.0",
     "@publicodes/react-ui": "1.4.0",
     "@r2wc/react-to-web-component": "^2.0.3",
@@ -63,6 +64,7 @@
     "next-query-params": "^5.0.0",
     "next-sitemap": "^4.2.3",
     "notion-client": "^6.16.0",
+    "playwright": "^1.47.1",
     "postcss": "^8.4.41",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-import": "^16.1.0",
@@ -94,7 +96,6 @@
     "@babel/preset-react": "^7.24.7",
     "@babel/preset-typescript": "^7.24.7",
     "@babel/runtime": "^7.25.4",
-    "@playwright/test": "^1.46.1",
     "@statoscope/webpack-plugin": "^5.28.2",
     "@storybook/addon-a11y": "^8.2.9",
     "@storybook/addon-essentials": "^8.2.9",
