--- a/package.json
+++ b/package.json
@@ -71,21 +71,15 @@
     "postcss-preset-env": "^10.0.5",
     "preact": "^10.24.0",
     "publicodes": "1.4.0",
+    "qrcode": "^1.5.4",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-flip-toolkit": "^7.2.4",
-    "react-highlight-words": "^0.20.0",
     "react-notion-x": "^6.16.0",
-    "react-range": "^1.10.0",
-    "react-responsive-carousel": "^3.2.23",
     "react-share": "^5.1.0",
-    "react-slick": "^0.30.2",
-    "react-switch": "^7.0.0",
     "sharp": "^0.33.5",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-react": "^5.17.14",
     "ts-node": "^10.9.2",
-    "use-query-params": "^2.2.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
@@ -110,6 +104,8 @@
     "@testing-library/user-event": "^14.5.2",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/jest": "^29.5.13",
+    "@types/node-pdftk": "^2.1.9",
+    "@types/qrcode": "^1.5.5",
     "@types/react-highlight-words": "^0.20.0",
     "@types/react-slick": "^0.23.13",
     "@types/swagger-jsdoc": "^6.0.4",
@@ -134,7 +130,9 @@
     "next-test-api-route-handler": "^4.0.11",
     "nock": "^13.5.5",
     "node-mocks-http": "^1.16.0",
+    "node-pdftk": "^2.1.3",
     "nyc": "^17.1.0",
+    "pdf-merger-js": "^5.1.2",
     "playwright": "^1.47.1",
     "postcss-loader": "^8.1.1",
     "prettier": "^3.3.3",
