chore: allow manual run for iframe testing

--- a/.github/workflows/iframes.yml
+++ b/.github/workflows/iframes.yml
@@ -2,6 +2,7 @@ name: Check iframes
 on:
   schedule:
     - cron: '0 4,12,16 * * 1-5'
+  workflow_dispatch:
 jobs:
   test:
     timeout-minutes: 60
