--- a/package.json
+++ b/package.json
@@ -32,11 +32,8 @@
     "stats:yearly": "dotenv -e .env ts-node src/scripts/getYearlyStats.ts",
     "start": "next start",
     "lint": "next lint",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build",
     "chromatic": "chromatic --exit-zero-on-changes",
-    "testIframes": "npx playwright install chromium; npx ts-node -r dotenv/config src/scripts/testIframes.ts",
-    "prepare": "husky"
+    "testIframes": "npx playwright install chromium; npx ts-node -r dotenv/config src/scripts/testIframes.ts"
   },
   "engines": {
     "node": ">22.0.0",
@@ -74,7 +71,7 @@
     "postcss-nested": "^7.0.2",
     "postcss-preset-env": "^10.2.1",
     "preact": "^10.26.8",
-    "publicodes": "1.4.0",
+    "publicodes": "1.9.0",
     "qrcode": "^1.5.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
@@ -96,14 +93,6 @@
     "@babel/runtime": "^7.27.6",
     "@playwright/test": "^1.52.0",
     "@statoscope/webpack-plugin": "^5.29.0",
-    "@storybook/addon-a11y": "^9.0.6",
-    "@storybook/addon-essentials": "^8.6.14",
-    "@storybook/addon-interactions": "^8.6.14",
-    "@storybook/addon-links": "^9.0.6",
-    "@storybook/blocks": "^8.6.14",
-    "@storybook/nextjs": "^9.0.6",
-    "@storybook/react": "^9.0.6",
-    "@storybook/testing-library": "^0.2.2",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
@@ -126,8 +115,6 @@
     "eslint-plugin-jest": "^28.13.0",
     "eslint-plugin-prettier": "^5.4.1",
     "eslint-plugin-react": "^7.37.5",
-    "eslint-plugin-storybook": "^9.0.6",
-    "husky": "^9.1.7",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "lint-staged": "^16.1.0",
@@ -143,8 +130,6 @@
     "postcss-loader": "^8.1.1",
     "prettier": "^3.5.3",
     "prisma": "^6.9.0",
-    "storybook": "^9.0.6",
-    "storybook-dark-mode": "^4.0.2",
     "style-loader": "^4.0.0",
     "typescript": "^5.8.3",
     "undici": "7.10.0",
