--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,36 +1,4 @@
 {
-  "extends": [
-    "eslint:recommended",
-    "plugin:react/recommended",
-    "next",
-    "prettier",
-    "plugin:prettier/recommended",
-    "plugin:@typescript-eslint/recommended",
-    "plugin:@typescript-eslint/eslint-recommended",
-    "next/core-web-vitals"
-  ],
-  "parser": "@typescript-eslint/parser",
-  "rules": {
-    "react/no-unescaped-entities": "off",
-    "no-irregular-whitespace": "off",
-    "react/self-closing-comp": "error",
-    "prettier/prettier": [
-      "error",
-      {
-        "singleQuote": true,
-        "jsxSingleQuote": true
-      }
-    ]
-  },
-  "plugins": [
-    "@typescript-eslint",
-    "prettier",
-    "jest"
-  ],
-  "env": {
-    "browser": true,
-    "es2022": true,
-    "node": true,
-    "jest/globals": true
-  }
+  "root": true,
+  "extends": "./eslint.config.mjs"
 }
