--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "testa:local": "NODE_ENV=test jest --watch ./testa",
     "teste:local": "NODE_ENV=test playwright test --ui",
     "testu:local": "NODE_ENV=test jest --watch ./testu",
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "prebuild": "pnpm prisma:generate",
     "prisma:generate": "prisma generate",
     "build": "pnpm webpack && next build",
@@ -31,7 +31,7 @@
     "stats": "tsx src/scripts/getStats.ts",
     "stats:yearly": "tsx src/scripts/getYearlyStats.ts",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "eslint .",
     "chromatic": "chromatic --exit-zero-on-changes",
     "testIframes": "playwright install chromium; tsx src/scripts/testIframes.ts",
     "preinstall": "npx -y only-allow@1.2.2 pnpm"
@@ -60,7 +60,7 @@
     "helmet": "^8.1.0",
     "html-to-image": "1.11.11",
     "markdown-to-jsx": "^7.7.13",
-    "next": "^15.5.4",
+    "next": "^16.0.7",
     "next-intl": "^4.3.9",
     "next-query-params": "^5.1.0",
     "next-sitemap": "^4.2.3",
@@ -94,6 +94,15 @@
     "@babel/preset-react": "^7.27.1",
     "@babel/preset-typescript": "^7.27.1",
     "@babel/runtime": "^7.28.4",
+    "@eslint/eslintrc": "^3.3.3",
+    "@keyv/etcd": "^2.1.1",
+    "@keyv/mongo": "^3.0.5",
+    "@keyv/mysql": "^2.1.9",
+    "@keyv/offline": "^4.0.2",
+    "@keyv/postgres": "^2.2.2",
+    "@keyv/redis": "^5.1.4",
+    "@keyv/sqlite": "^4.0.6",
+    "@keyv/tiered": "^2.0.2",
     "@next/bundle-analyzer": "^15.5.4",
     "@playwright/test": "^1.55.1",
     "@statoscope/webpack-plugin": "^5.29.0",
@@ -116,7 +125,7 @@
     "css-loader": "6.11.0",
     "dotenv": "^17.2.3",
     "eslint": "^9.36.0",
-    "eslint-config-next": "^15.5.4",
+    "eslint-config-next": "^16.0.7",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-jest": "^29.0.1",
     "eslint-plugin-prettier": "^5.5.4",
