--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "@iframe-resizer/child": "^5.5.7",
     "@iframe-resizer/parent": "^5.5.7",
     "@incubateur-ademe/publicodes-acv-numerique": "^2.1.0",
-    "@prisma/client": "^6.19.1",
+    "@prisma/adapter-pg": "^7.2.0",
+    "@prisma/client": "^7.2.0",
     "@publicodes/react-ui": "^1.10.0",
     "@r2wc/react-to-web-component": "^2.1.0",
     "@sentry/nextjs": "^10.32.1",
@@ -66,13 +67,14 @@
     "next-sitemap": "^4.2.3",
     "notion-client": "^7.7.3",
     "notion-types": "^7.7.3",
+    "pg": "^8.16.3",
     "postcss": "^8.5.6",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-import": "^16.1.1",
     "postcss-nested": "^7.0.2",
     "postcss-preset-env": "^10.5.0",
     "preact": "^10.28.1",
-    "prisma": "^6.19.1",
+    "prisma": "^7.2.0",
     "publicodes": "1.4.0",
     "qrcode": "^1.5.4",
     "react": "^19.2.3",
@@ -112,6 +114,7 @@
     "@trivago/prettier-plugin-sort-imports": "^6.0.0",
     "@types/jest": "^30.0.0",
     "@types/node-pdftk": "^2.1.9",
+    "@types/pg": "^8.16.0",
     "@types/qrcode": "^1.5.6",
     "@types/react": "^19.2.7",
     "@types/react-highlight-words": "^0.20.1",
